fix: fixing responsiveness on smaller screens

--- a/src/components/containers/Header/Header.scss
+++ b/src/components/containers/Header/Header.scss
@@ -4,6 +4,9 @@
   padding: 30px 0px 30px 100px;
   border-bottom: 2px solid #aaaaaa;
   text-align: left;
+  @media (max-width: 1550px){
+    padding-bottom: 10px;
+  }
   @media (max-width: 768px) {
     border-bottom: none;
     padding-bottom: 15px;
